--- a/package.json
+++ b/package.json
@@ -4,22 +4,24 @@
   "description": "",
   "main": "src/index.ts",
   "scripts": {
+    "postinstall": "yarn audit",
     "prebuild": "tslint -c tslint.json -p tsconfig.json --fix",
     "prestart": "npm run build",
     "build": "tsc",
     "start": "node .",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "security": "yarn audit"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/express": "^4.16.0",
-    "@types/node": "^10.12.12",
-    "express": "^4.16.4"
+    "express": "4.16.4"
   },
   "devDependencies": {
-    "tslint": "^5.11.0",
-    "typescript": "^3.2.1"
+    "@types/express": "4.16.0",
+    "@types/node": "10.12.12",
+    "tslint": "5.11.0",
+    "typescript": "3.2.1"
   }
 }
