--- a/package.json
+++ b/package.json
@@ -4,13 +4,11 @@
   "description": "",
   "main": "src/index.ts",
   "scripts": {
-    "postinstall": "yarn audit",
     "prebuild": "tslint -c tslint.json -p tsconfig.json --fix",
     "prestart": "npm run build",
     "build": "tsc",
     "start": "node .",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "security": "yarn audit"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
