--- a/package.json
+++ b/package.json
@@ -1,17 +1,24 @@
 {
   "name": "express-ts",
   "version": "1.0.0",
+  "author": "Bartosz Kotrys <bartosz.kotrys@gmail.com>",
   "description": "",
+  "repository": "",
   "main": "src/index.ts",
+  "private": true,
   "scripts": {
-    "prebuild": "tslint -c tslint.json -p tsconfig.json --fix",
-    "prestart": "npm run build",
-    "build": "tsc",
-    "start": "node .",
+    "preinstall": "npx use-yarn -m 'Please use yarn!'",
+    "lint": "tslint -c tslint.json -p tsconfig.json --fix",
+    "prebuild": "yarn lint && tsc",    
+    "build": "node build/index.js",
+    "start": "yarn build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "engines": {
+    "node": ">= 10.0.0 < 11.0.0",
+    "yarn": "^1.12.3"
+  },
   "keywords": [],
-  "author": "",
   "license": "ISC",
   "dependencies": {
     "express": "4.16.4"
@@ -20,6 +27,7 @@
     "@types/express": "4.16.0",
     "@types/node": "10.12.12",
     "tslint": "5.11.0",
-    "typescript": "3.2.1"
+    "typescript": "3.2.1",
+    "use-yarn": "2.2.0"
   }
 }
